--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -385,11 +385,13 @@ button {
   padding: var(--space-6);
   margin-left: 280px; // Account for fixed sidebar width
   width: calc(100% - 280px); // Subtract sidebar width
+  padding-top: var(--space-8); // Add extra top padding to clear navbar
   
   @include respond-below(lg) {
     margin-left: 0;
     width: 100%;
     padding: var(--space-4);
+    padding-top: var(--space-6);
   }
 }
 
